examples/test/testpolicy3906.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3906
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key1: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value5
          key44: value43
          key42: value20
      podSelector:
        matchLabels:
          key29: value33
          key16: value23
